# PizzaAssist

./: .gitignore  README.md  __init__.py  app.py  cli.py  constants.py  create_data_structure.sh  logging_config.py  main.ipynb  main.py  pyproject.toml  requirements.txt  server.py  setup.py  tash apply  temp.py  test_socket.py  test_websocket.py  utils.py  websocket_message_format.md
core/: .gitignore  __init__.py  agent.py  config.py  constants.py  doc_utils.py  main.py  memory.py  orders.txt  realistic_restaurant_reviews.csv  tool_registry.py  utils.py  validation_utils.py  vector_store.py
core/interfaces/: pizza_assist_tool.py
core/tools/: README.md  __init__.py  order_tools.py  query_documents.py  query_memory.py
safe/: 0c0a5f59-27d4-4665-b800-fcab6b70af7e.jsonl  41a87778-5799-4989-98bf-bf4b2332746a.jsonl  62e4082a-756d-4495-9f74-49a1d8b6a413.jsonl  _conversation_history.jsonl  c6065e23-be5f-48ba-8954-70ca231165c4.jsonl  eaf9101a-0c4e-4682-ac62-e723369edb5e.jsonl
scripts/: create_data_structure.py  create_data_structure.sh
scripts/templates/: system_message.template.txt  welcome_message.template.txt
server/: __init__.py  app.py  initialization.py  routes.py  websocket.py
tools/: README.md
tools/dev_utils/: README.md  __init__.py  tool.py
tools/order_tools/: README.md  __init__.py  tool.py
tools/query_documents/: README.md  __init__.py  tool.py
tools/query_memory/: README.md  __init__.py  tool.py
websocket-client/: package-lock.json  package.json
websocket-client/src/: App.jsx  WebSocketPingPong.jsx
websocket-client/src/components/: ChatMessages.jsx  Header.jsx  MessageInput.jsx
